First working prototype, extract the programs on air now. Working Schedule, Channels, Program data structures. Added DateFormatter for I/O with Dates.